# inoa-test

./: .gitignore  README.md  avaliable-stocks.txt  pyproject.toml
b3/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
b3/migrations/: 0001_initial.py  0002_auto_20240718_1333.py  0002_auto_20240718_1937.py  0002_auto_20240719_1326.py  0003_delete_searchrequest.py
b3/services/: brapi.py
core/: celery.py  settings.py  signals.py  tasks.py  urls.py
src/: settings.py
